# events_fastAPI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.live.yml   docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
src/: .flake8  .isort.cfg  .mypy.ini  alembic.ini  celerybeat-schedule  gen_typing.py  main.py  refresh_db.py  worker.py
src/admin/: __init__.py  auth.py  data_source.py  event.py  user.py
src/api/: app.py  depends.py  schemas.py
src/api/auth/: __init__.py  app.py  schemas.py
src/api/events/: app.py  schemas.py
src/api/google/: app.py
src/api/users/: app.py  schemas.py
src/common/: __init__.py
src/common/auth/: __init__.py
src/config/: __init__.py  settings.py
src/connections/: __init__.py  postgresql.py
src/data/: __init__.py  base.py  context.py  predicthq.py  schemas.py  tasks.py  ticketmaster.py
src/data/tests/: test_load_predicthq_data.py  test_load_ticketmaster_data.py
src/data/tests/fixtures/: mock_response.py  predicthq_response.json  ticketmaster_response.json
src/errors/: __init__.py  exceptions.py
src/migrations/: env.py
src/migrations/versions/: 1f0031c00b66_init.py  2a7d5c026929_initial.py  35be8dc25b0a_email_verify.py  39f31fe36956_user_avatar.py  3c8e1e868e83_initial.py  3e0da213264c_add_data_source_table.py  4399c3fa41c1_.py  7ee29cdf00c0_add_data_source_table_v3.py  801cb3d45860_initial.py  81e29080116b_initial.py  923f7e042486_initial.py  aa4f7192d80c_initial.py  b30aa866e2f4_init.py  e15a4a065a55_add_oauth_accounts_table.py  e2506572dfd7_initial.py  e96fbc34c320_user_add_tfa.py  ed8982833557_add_data_source_table_v2.py  ee98ea188fd2_initial.py  feb7515fdfd6_email_validate.py
src/models/: __init__.py  base.py  data_source.py  event.py  oauth_account.py  user.py  user_event.py
src/templates/: base.html  reset_password.html  success_google_oauth.html  verify_email.html
src/tests/: conftest.py  mixins.py  test_main.py
src/tests/api/events/: test_attend.py  test_detail.py  test_events.py  test_my.py
src/tests/api/users/: test_avatar_upload.py  test_disable_tfa.py  test_enable_tfa.py  test_login.py  test_login_otp.py  test_signup.py  test_user.py
src/tests/fixtures/: base.py  factories.py
src/tests/test_routes/test_events/: test_event_attend.py  test_event_detail.py  test_events.py  test_events_my.py
src/tests/test_routes/test_user/: test_avatar_upload.py  test_user.py  test_user_login.py  test_user_signup.py
src/utils/: cryptography.py  images.py  mail.py  schemas.py  users.py
