[tool.poetry]
name = 'vents-fastapi'
version = '0.1.0'
description = 'Online event aggregator test project'
authors = ['Tatiana Kiriushina <higanbana.work@gmail.com>']
readme = 'README.md'

[tool.poetry.dependencies]
python = '^3.11'
fastapi = '^0.100.0'
uvicorn = '^0.22.0'
pydantic = { version = '^2.0.3', extras = ["email"] }
pydantic-settings = '^2.0.1'
SQLAlchemy = '^2.0.18'
PyJWT = '^2.7.0'
asyncpg = '^0.28.0'
alembic = '^1.11.1'
Jinja2 = '^3.1.2'
Pillow = '^10.0.0'
aiohttp = '^3.8.5'
Authlib = '^1.2.0'
itsdangerous = '^2.1.2'
pyotp = '^2.8.0'
httpx = '^0.24.1'
bcrypt = '^4.0.1'
python-multipart = '^0.0.6'

[tool.poetry.dev-dependencies]
mypy = '^1.4.0'
mypy-extensions = '^1.0.0'
pylint = '^2.12.2'
isort = '^5.10.1'
flake8 = '^6.0.0'
pytest = '^7.4.0'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
